--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
         }
     ],
     "require": {
-        "php" : ">= 7.2.0",
-        "filp/whoops": "~2",
-        "monolog/monolog": "^3",
+        "php": ">=7.2.0",
+        "filp/whoops": "^2.7",   
+        "monolog/monolog": "^3.0",
         "vlucas/phpdotenv": "^5.6",
         "robmorgan/phinx": "^0.16.0",
         "twig/twig": "^3.10",
-        "phpoffice/phpspreadsheet": "^1.23" 
+        "phpoffice/phpspreadsheet": "^1.23"
     },
     "autoload": {
         "psr-4": {
